# xava

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  cava.c  config.c  config.h  configure.ac  flake.nix  gava.c  index.html  params.json  todo
.github/actions/archlinux/: action.yaml  build.sh
.github/actions/compile/: action.yaml
.github/actions/prepare/: action.yaml
.github/actions/upload/: action.yaml
.github/actions/windows/: action.yaml  build.sh
.github/docker/archlinux/: Dockerfile  build.sh
.github/docker/archlinux/make/: action.yaml
.github/docker/archlinux/send/: action.yaml
.github/docker/windows/: Dockerfile  build.sh
.github/docker/windows/make/: action.yaml
.github/docker/windows/send/: action.yaml
.github/workflows/: build.yaml  cmake.yml  main.yaml  pre-release.yaml
assets/desktop/: xava.desktop
assets/linux/: xava.desktop  xava.desktop.template
assets/nsis-win/: gava.nsi  xava.nsi
assets/opengl/shaders/: default.frag  default.vert
assets/windows/: readme.txt  xava.nsi  xava.nsi.template  xava.rc  xava.rc.template
example_files/: config
example_files/desktop/: gava.desktop
example_files/egl/shaders/: fragment.glsl  post.frag  post.vert  pre.frag  pre.vert  vertex.glsl
example_files/gl/shaders/: post.frag  post.vert  pre.frag  pre.vert
example_files/gl/shaders/default/: config.ini  fragment.glsl
example_files/gl/shaders/kinetic/: config.ini  fragment.glsl
example_files/gl/shaders/post/default/: fragment.glsl  vertex.glsl
example_files/gl/shaders/post/kinetic/: fragment.glsl
example_files/gl/shaders/post/shadow/: fragment.glsl  vertex.glsl
example_files/gl/shaders/pre/circle/: geometry.glsl
example_files/gl/shaders/pre/default/: fragment.glsl  geometry.glsl  vertex.glsl
example_files/gl/shaders/pre/osciloscope/: config.ini  fragment.glsl  geometry.glsl  vertex.glsl
example_files/gl/shaders/pre/wave/: config.ini  fragment.glsl  geometry.glsl
example_files/gl/shaders/shadow/: fragment.glsl
example_files/nsis-win/: README.txt  cava.nsi  config
input/: alsa.c  fifo.c  fifo.h  portaudio.c  pulse.c  pulse.h  sndio.h
javascripts/: main.js
misc/: reload.c  reload.h
output/: .graphical_x.c.swp  graphical.c  graphical.h  graphical_sdl.c  graphical_sdl.h  graphical_win.c  graphical_win.h  graphical_x.c  graphical_x.h  raw.c  terminal_bcircle.c  terminal_ncurses.c  terminal_noncurses.c
src/: config.c  config.h  log.c  log.h  module.c  module.h  shared.c  shared.h  xava.c
src/cmake/: build-fix.cmake  copy_gl_shaders.cmake  install_and_configure.cmake  modules.cmake  os-prerequisites.cmake  utilities.cmake
src/filters/default/: build.cmake  main.c
src/input/: alsa.c  alsa.h  fifo.c  fifo.h  portaudio.c  portaudio.h  pulse.c  pulse.h  shmem.c  shmem.h  sndio.c  sndio.h  wasapi.cpp  wasapi.h
src/input/alsa/: build.cmake  main.c  main.h
src/input/cubeb/: build.cmake  main.c
src/input/fifo/: build.cmake  main.c  main.h
src/input/pipewire/: build.cmake  main.c
src/input/portaudio/: build.cmake  main.c  main.h
src/input/pulseaudio/: build.cmake  main.c  main.h
src/input/shmem/: build.cmake  main.c
src/input/sndio/: build.cmake  main.c
src/input/wasapi/: build.cmake  main.cpp  main.h
src/misc/: inode_watcher.c
src/output/: graphical.c  graphical.h  graphical_sdl.c  graphical_sdl.h  graphical_wayland.c  graphical_wayland.h  graphical_win.c  graphical_win.h  graphical_x.c  graphical_x.h  module.h  raw.c
src/output/default/: build.cmake  main.c
src/output/graphical_sdl2/: build.cmake  main.c  test.c
src/output/graphical_wayland/: build.cmake  cairo.c  cairo.h  egl.c  egl.h  main.c  main.h  registry.c  registry.h  render.c  render.h  shm.c  shm.h  test.c  wl_output.c  wl_output.h  xdg.c  xdg.h  zwlr.c  zwlr.h
src/output/graphical_win/: build.cmake  main.c  main.h  test.c
src/output/graphical_x11/: build.cmake  main.c  main.h  test.c
src/output/shared/: egl.c  egl.h  gl.c  gl.h  gl_shared.c  gl_shared.h  glew.c  glew.h  graphical.c  graphical.h
src/output/shared/cairo/: main.c  main.h
src/output/shared/cairo/modules/bars/: build.cmake  main.c
src/output/shared/cairo/modules/kinetic/: build.cmake  main.c
src/output/shared/cairo/modules/media_info/: artwork.c  artwork.h  build.cmake  main.c  media_data.c  media_data.h
src/output/shared/cairo/modules/oscilloscope/: build.cmake  config.ini  main.c
src/output/shared/cairo/modules/shared/: config.c  (+1 more)
src/output/shared/cairo/util/: feature_compat.c  feature_compat.h  module.c  module.h  region.c  region.h
src/output/shared/gl/: egl.c  egl.h  glew.c  glew.h  main.c  main.h  post.c  post.h
src/output/shared/gl/util/: misc.c  shader.c  shader.h
src/output/shared/gl_modules/bars/: build.cmake  main.c
src/output/shared/gl_modules/bars_circle/: main.c
src/output/shared/gl_modules/shared/: post.c  post.h  shader.c  shader.h  util.c  util.h
src/output/shared/util/media/: artwork.c  artwork.h  artwork_taglib.cpp  media_data.c  media_data.h
src/output/terminal_ncurses/: build.cmake  main.c
src/output/unsupported/graphical_sdl2/: build.cmake  main.c
src/output/unsupported/graphical_sdl2_oscilate/: build.cmake
src/output/unsupported/graphical_sdl2_osciloscope/: build.cmake  main.c
src/output/unsupported/graphical_wayland/: build.cmake  main.c  main.h  registry.c  registry.h  render.c  render.h  wl_output.c  wl_output.h  xdg.c  zwlr.c  zwlr.h
src/output/unsupported/graphical_x11/: build.cmake  main.c
src/output/unsupported/terminal_ncurses/: build.cmake  main.c
src/shared/: build.cmake  config.h  io.c  io.h  ionotify.c  ionotify.cpp  ionotify.h  log.c  log.h  module.h  types.h  version.c  version.h
src/shared/config/: config.c  config.h  pywal.c  pywal.h
src/shared/io/: io.c  io.h  unix.c  unix.h
src/shared/ionotify/: abstractions.c  linux.c  shared.h  windows.c
src/shared/module/: abstractions.c  internal.h  unix.c  windows.c
src/shared/test/: basic_event_stack.c
src/shared/util/: array.h  version.c
stylesheets/: stylesheet.css
(+24 files in other folders)
